# tmock

./: GEMINI.md  LICENSE  README.md  pyproject.toml
docs/: async.md  fields.md  functions.md  magic-methods.md  matchers.md  patching.md  protocols.md  reset.md  stubbing.md  verification.md
tests/: test_stubbing_dsl.py
