[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmock"
version = "0.1.2"
description = "A strict, type-safe mock library for Python with full IDE autocomplete support."
readme = "README.md"
authors = [{name = "Pedram", email = "pedram.esmaeeli@gmail.com"}]
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["mock", "testing", "type-safe", "mockito", "mypy", "pyright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]
dependencies = [
    "typeguard>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/soypedram/tmock"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
